@@ -150,7 +150,7 @@ class StreamAlternativeTest {
       Stream<Unit> stream = STREAM.narrow(result);
       List<Unit> list = stream.collect(Collectors.toList());
       assertThat(list).hasSize(1);
-      assertThat(list.get(0)).isEqualTo(Unit.INSTANCE);
+      assertThat(list.getFirst()).isEqualTo(Unit.INSTANCE);
     }
 
     @Test
@@ -170,6 +170,7 @@ class StreamAlternativeTest {
 
     @Test
     @DisplayName("orElseAll() concatenates all streams")
+    @SuppressWarnings("unchecked") // generic varargs of Supplier<Kind<...>>
     void orElseAllConcatenatesAll() {
       Kind<StreamKind.Witness, Integer> stream1 = STREAM.widen(Stream.of(1, 2));
       Kind<StreamKind.Witness, Integer> stream2 = STREAM.widen(Stream.of(3, 4));
@@ -185,6 +186,7 @@ class StreamAlternativeTest {
 
     @Test
     @DisplayName("orElseAll() with some empty streams")
+    @SuppressWarnings("unchecked") // generic varargs of Supplier<Kind<...>>
     void orElseAllWithSomeEmpty() {
       Kind<StreamKind.Witness, Integer> stream1 = STREAM.widen(Stream.of(1, 2));
       Kind<StreamKind.Witness, Integer> empty = alternative.empty();
@@ -241,9 +243,10 @@ class StreamAlternativeTest {
 
     @Test
     @DisplayName("orElseAll(Iterable) preserves laziness — does not consume source streams eagerly")
+    @SuppressWarnings({"ConstantValue", "DataFlowIssue"}) // peek side effect hidden from dataflow
     void orElseAllIterablePreservesLaziness() {
       boolean[] consumed = {false};
-      Stream<Integer> peeking = Stream.of(1, 2, 3).peek(x -> consumed[0] = true);
+      Stream<Integer> peeking = Stream.of(1, 2, 3).peek(_ -> consumed[0] = true);
       List<Kind<StreamKind.Witness, Integer>> streams =
           Arrays.asList(STREAM.widen(peeking), STREAM.widen(Stream.of(4)));
 
@@ -267,12 +270,13 @@ class StreamAlternativeTest {
 
       List<Integer> collected = STREAM.narrow(result).collect(Collectors.toList());
       assertThat(collected).hasSize(5_000);
-      assertThat(collected.get(0)).isEqualTo(0);
+      assertThat(collected.getFirst()).isEqualTo(0);
       assertThat(collected.get(4_999)).isEqualTo(4_999);
     }
 
     @Test
     @DisplayName("orElseAll(null iterable) throws NullPointerException")
+    @SuppressWarnings("DataFlowIssue") // null is passed deliberately to verify rejection
     void orElseAllNullIterableThrows() {
       assertThatNullPointerException()
           .isThrownBy(
@@ -282,6 +286,7 @@ class StreamAlternativeTest {
 
     @Test
     @DisplayName("orElseAll(iterable with null element) throws NullPointerException on consumption")
+    @SuppressWarnings("DataFlowIssue") // null is passed deliberately to verify rejection
     void orElseAllNullElementThrows() {
       List<Kind<StreamKind.Witness, Integer>> streams = new ArrayList<>();
       streams.add(STREAM.widen(Stream.of(1)));
@@ -290,8 +295,7 @@ class StreamAlternativeTest {
       Kind<StreamKind.Witness, Integer> result = alternative.orElseAll(streams);
       // Validation is deferred until the resulting stream is consumed, which is correct for the
       // lazy contract — but the consumer is guaranteed to see the failure.
-      assertThatNullPointerException()
-          .isThrownBy(() -> STREAM.narrow(result).collect(Collectors.toList()));
+      assertThatNullPointerException().isThrownBy(() -> STREAM.narrow(result).forEach(_ -> {}));
     }
   }
 
